--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -87,14 +87,30 @@ jobs:
         type: 'zip'
         filename: '${{ github.ref_name }}-${{ steps.getversion.outputs.version }}.zip'
         exclusions: >-
-          *.git*
-          /*node_modules/*
-          .editorconfig
-          /*build/*
-          /*types/*
-          /*dist/*
-          /*output/*
-          /*Docs/*'
+          .git
+          .github
+          output
+          Common/build
+          Common/docs
+          Common/node_modules
+          Docs
+          Extras
+          Frontend/Docs
+          Frontend/implementations/typescript/node_modules
+          Frontend/library/dist
+          Frontend/library/node_modules
+          Frontend/library/types
+          Frontend/ui-library/dist
+          Frontend/ui-library/node_modules
+          Frontend/ui-library/types
+          SFU/Docs
+          SFU/node_modules
+          Signalling/build
+          Signalling/docs
+          Signalling/node_modules
+          SignallingWebServer/build
+          SignallingWebServer/node_modules
+          SS_Test
 
     - name: "Make the release"
       uses: ncipollo/release-action@v1
