--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -91,8 +91,8 @@ jobs:
           */.github/*
           */node_modules/*
           */output/*
-          */Common/build/*
-          */Common/docs/*
+          /*/Common/build/*
+          /*/Common/docs/*
           */Docs/*
           */Extras/*
           */Frontend/Docs/*
