--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -93,18 +93,18 @@ jobs:
           */output/*
           /*/Common/build/*
           /*/Common/docs/*
-          */Docs/*
-          */Extras/*
-          */Frontend/Docs/*
-          */Frontend/library/dist/*
-          */Frontend/library/types/*
-          */Frontend/ui-library/dist/*
-          */Frontend/ui-library/types/*
-          */SFU/Docs/*
-          */Signalling/build/*
-          */Signalling/docs/*
-          */SignallingWebServer/build/*
-          */SS_Test/*
+          /*/Docs/*
+          /*/Extras/*
+          /*/Frontend/Docs/*
+          /*/Frontend/library/dist/*
+          /*/Frontend/library/types/*
+          /*/Frontend/ui-library/dist/*
+          /*/Frontend/ui-library/types/*
+          /*/SFU/Docs/*
+          /*/Signalling/build/*
+          /*/Signalling/docs/*
+          /*/SignallingWebServer/build/*
+          /*/SS_Test/*
 
     - name: "Make the release"
       uses: ncipollo/release-action@v1
